# synacor

./: README.org  default.nix  hie.yaml  shell.nix  synacor.cabal
app/: Main.hs
data/: arch-spec  synacor-challenge.tgz
src/: Lib.hs
test/: TestSuite.hs
